[project]
name = "django_dramatiq"
version = "0.14.0"
description = "A Django app for Dramatiq."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Bogdan Popa", email = "bogdan@defn.io"},
]
classifiers = [
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "django>=4.2",
    "dramatiq>=1.11",
]

[project.urls]
Homepage = "https://github.com/Bogdanp/django_dramatiq"
Repository = "https://github.com/Bogdanp/django_dramatiq"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "django_dramatiq",
    "django_dramatiq.management",
    "django_dramatiq.management.commands",
    "django_dramatiq.migrations",
]
include-package-data = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
testpaths = ["tests"]
addopts = "--cov django_dramatiq --cov-report term --cov-fail-under=85"

[tool.flake8]
ignore = ["E402", "F403", "F811"]
exclude = ["migrations", ".venv", "examples"]
max-complexity = 20
max-line-length = 120
inline-quotes = "\""
multiline-quotes = "\"\"\""

[tool.isort]
profile = "black"
not_skip = "__init__.py"
line_length = 120
known_first_party = ["django_dramatiq"]
multi_line_output = 5
order_by_type = true

[tool.coverage.report]
omit = [
    "__init__.py",
    "django_dramatiq/setup.py",
    "*/migrations/*",
    "*/tests/*",
]

[tool.uv]
dev-dependencies = [
    "flake8",
    "flake8-quotes", 
    "isort",
    "pytest",
    "pytest-cov",
    "pytest-django",
]