[project]
name = "django_dramatiq"
version = "0.15.0"
description = "A Django app for Dramatiq."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache License 2.0"}
authors = [
    {name = "Bogdan Popa", email = "bogdan@defn.io"},
]
classifiers = [
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "django>=4.2",
    "dramatiq>=1.11",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-django",
]

[project.urls]
Homepage = "https://github.com/Bogdanp/django_dramatiq"
Repository = "https://github.com/Bogdanp/django_dramatiq"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "django_dramatiq"
module-root = ""

[tool.ruff]
exclude = ["migrations"]
line-length = 120

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
testpaths = ["tests"]
addopts = "--cov django_dramatiq --cov-report term --cov-fail-under=87"

[tool.coverage.report]
omit = [
    "__init__.py",
    "django_dramatiq/setup.py",
    "*/migrations/*",
    "*/tests/*"
]
